--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <properties>
         <myfaces2.version>2.1.13</myfaces2.version>
-        <ds.version>0.6-SNAPSHOT</ds.version>
+        <ds.version>0.6</ds.version>
         <extval.version>2.0.7</extval.version>
         <owb.version>1.1.8</owb.version>
     </properties>
