--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <ds.version>0.8-SNAPSHOT</ds.version>
+        <ds.version>1.0.0</ds.version>
         <extval.version>2.0.7</extval.version>
         <owb.version>1.1.8</owb.version>
     </properties>
